# NAND2TETRIS-ToolChain

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
Compiler/: Token.h  TokenTypes.h  Tokenizer.cpp  Tokenizer.h
Compiler/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
Compiler/Parser/: AST.h  Parser.cpp  Parser.h
Compiler/SemanticAnalyser/: GlobalRegistry.cpp  GlobalRegistry.h  SemanticAnalyser.cpp  SemanticAnalyser.h  SymbolTable.cpp  SymbolTable.h
Compiler/Tokenizer/: TokenTypes.h  Tokenizer.cpp  Tokenizer.h
Compiler/VMWriter/: VMWriter.cpp  VMWriter.h
JackCode/JackProject/: Student.jack
docs/: RELEASE_README.txt
scripts/: install.bat  install.sh
tests/: BasicTest.jack  EverythingTest.jack  jack_tokens.cpp
tests/JackCodeGenTest/: jack_codegen.cpp
tests/JackParserTest/: jack_parser.cpp
tests/JackSemanticAnalyser/: jack_semantic.cpp
tests/JackTestCode/: EverythingTest.jack  StressTest.jack  StringAndArrayTest.jack
tests/JackTokensTest/: jack_tokens.cpp
tools/: global_registry_viz.py  jack_viz.py
